crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_std41h12_1280x720.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 95
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 1.7236
  mean_reprojection_rmse: 4.4871
  p50_translation_error: 0.0081
  p90_translation_error: 0.0465
  p99_translation_error: 0.209
  p50_rotation_error: 5.1824
  p90_rotation_error: 17.8689
  p99_rotation_error: 28.8244
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0087_cam_0000.png
      missed: 0
      extra: 0
      rmse: 6.2117
    - filename: scene_0056_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.7398
    - filename: scene_0083_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.2822
    - filename: scene_0011_cam_0000.png
      missed: 0
      extra: 0
      rmse: 4.0693
    - filename: scene_0077_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.773
