crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_std41h12_1920x1080.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 95
  mean_recall: 1
  mean_precision: 0.9947368421052631
  mean_rmse: 1.6399
  mean_reprojection_rmse: 4.7629
  p50_translation_error: 0.0103
  p90_translation_error: 0.0924
  p99_translation_error: 0.2954
  p50_rotation_error: 3.9013
  p90_rotation_error: 21.8403
  p99_rotation_error: 31.7762
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0058_cam_0000.png
      missed: 0
      extra: 1
      rmse: 1.4239
    - filename: scene_0021_cam_0000.png
      missed: 0
      extra: 0
      rmse: 5.297
    - filename: scene_0065_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.7481
    - filename: scene_0066_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.2842
    - filename: scene_0063_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.2396
