crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_std41h12_640x480.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 95
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 1.3633
  mean_reprojection_rmse: 2.8573
  p50_translation_error: 0.0102
  p90_translation_error: 0.0406
  p99_translation_error: 0.0723
  p50_rotation_error: 6.2725
  p90_rotation_error: 15.8761
  p99_rotation_error: 31.3435
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0016_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.4989
    - filename: scene_0093_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.4475
    - filename: scene_0088_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.052
    - filename: scene_0030_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.9638
    - filename: scene_0054_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.9584
