crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 95
  mean_recall: 1
  mean_rmse: 106.7554
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0043_cam_0000.png
      missed: 0
      extra: 0
      rmse: 190.2516
    - filename: scene_0031_cam_0000.png
      missed: 0
      extra: 0
      rmse: 187.0113
    - filename: scene_0058_cam_0000.png
      missed: 0
      extra: 0
      rmse: 182.0814
    - filename: scene_0070_cam_0000.png
      missed: 0
      extra: 0
      rmse: 180.5222
    - filename: scene_0036_cam_0000.png
      missed: 0
      extra: 0
      rmse: 180.4191
