crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_1280x720.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 1.8216
  mean_reprojection_rmse: 5.6139
  p50_translation_error: 0.0917
  p90_translation_error: 0.172
  p99_translation_error: 0.5242
  p50_rotation_error: 3.3844
  p90_rotation_error: 22.5363
  p99_rotation_error: 46.9041
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0021_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.1414
    - filename: scene_0008_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.8517
    - filename: scene_0006_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.5405
    - filename: scene_0038_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.3483
    - filename: scene_0012_cam_0000.png
      missed: 0
      extra: 0
      rmse: 2.3342
