crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_1280x720_edlines_none.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.96
  mean_precision: 1
  mean_rmse: 0.1661
  mean_reprojection_rmse: 0.1626
  p50_translation_error: 0.0004
  p90_translation_error: 0.0036
  p99_translation_error: 0.0177
  p50_rotation_error: 0.0896
  p90_rotation_error: 0.2934
  p99_rotation_error: 1.1714
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0008_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0020_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
