crates/locus-core/tests/snapshots/regression_render_tag__hub_single_tag_locus_v1_tag36h11_1280x720_fast.snap
---
source: crates/locus-core/tests/regression_render_tag.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.9333
  mean_reprojection_rmse: 3.1187
  p50_translation_error: 0.0053
  p90_translation_error: 0.0532
  p99_translation_error: 0.0958
  p50_rotation_error: 2.2025
  p90_rotation_error: 12.1563
  p99_rotation_error: 18.5204
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  geometry_violations: 0
  worst_offenders:
    - filename: scene_0021_cam_0000.png
      missed: 0
      extra: 0
      rmse: 3.1954
    - filename: scene_0048_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.7238
    - filename: scene_0032_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.6071
    - filename: scene_0033_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.5879
    - filename: scene_0006_cam_0000.png
      missed: 0
      extra: 0
      rmse: 1.4937
